# cicd-sdk

./: .pre-commit-config.yaml  README.md
.github/workflows/: main.yml
app/: main.py  pyproject.toml
bk/app/: main.py
code/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
code/app/: main.py
code/app/core/: config.py  database.py
code/app/users/: endpoints.py  models.py
code/src/core/: config.py  database.py  utils.py
code/src/users/: endpoints.py  models.py  test_endpoints.py  tests.py
code/src/users/tests/: conftest.py  test_endpoints.py
code/src/users/tests/fixtures/: user.json  user_minimal.json  user_minimal_with_updates.json  user_with_extra_field.json  user_with_updates.json  user_with_wrong_date_format.json  user_with_wrong_firebase_id_format.json  user_with_wrong_social_security_number.json
code/utils/: db.json
infrastructure/: .gitignore  README.md  app.py  requirements.txt
infrastructure/infrastructure/: config.py  infrastructure_stack.py
infrastructure/tests/unit/: test_infrastructure_stack.py
