[tool.poetry]
name = "Auth Service"
version = "0.1.0"
description = "Auth Service for TA"
authors = ["Carlo Alva <v-calva@trueaccord.com@trueaccord.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
mangum = "^0.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
