[tool.poetry]
name = "Auth Service"
version = "0.1.0"
description = "Auth service for True Accord"
authors = ["Carlo1911 <carlo.alva@pucp.pe>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
mangum = "^0.12.3"
python-dotenv = "^0.19.2"
boto3 = "^1.20.23"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
